php.net |  support |  documentation |  report a bug |  advanced search |  search howto |  statistics |  random bug |  login
Bug #44373 PDO_OCI extension compile failed
Submitted: 2008-03-08 13:27 UTC Modified: 2016-03-08 01:33 UTC
From: petr at hroch dot info Assigned: sixd (profile)
Status: Closed Package: PDO OCI
PHP Version: 5.3CVS-2008-03-08 (snap) OS: Linux Debian Etch 4.0
Private report: No CVE-ID: None
 [2008-03-08 13:27 UTC] petr at hroch dot info
Description:
------------
PDO_OCI extension compile failed

Reproduce code:
---------------
Temporary workaround:
1. phpize
2. ./configure
3. open generated config.h
   Change line with #define PHP_PDO_OCI_CLIENT_VERSION "10.1" to
   #define PHP_PDO_OCI_CLIENT_VERSION '10.1'
4. make

Hope it helps

Regards
Petr

Actual result:
--------------
sit:/usr/install/src/php5.3-dev/ext/pdo_oci# make
/bin/sh /usr/install/src/php5.3-dev/ext/pdo_oci/libtool --mode=compile gcc -I/usr/local/php/include/php/ext -I. -I/usr/install/src/php5.3-dev/ext/pdo_oci -DPHP_ATOM_INC -I/usr/install/src/php5.3-dev/ext/pdo_oci/include -I/usr/install/src/php5.3-dev/ext/pdo_oci/main -I/usr/install/src/php5.3-dev/ext/pdo_oci -I/usr/local/php/include/php -I/usr/local/php/include/php/main -I/usr/local/php/include/php/TSRM -I/usr/local/php/include/php/Zend -I/usr/local/php/include/php/ext -I/usr/local/php/include/php/ext/date/lib -I/usr/local/oracle/home1/rdbms/public -I/usr/local/oracle/home1/rdbms/demo  -DHAVE_CONFIG_H  -g -O2   -c /usr/install/src/php5.3-dev/ext/pdo_oci/pdo_oci.c -o pdo_oci.lo
mkdir .libs
 gcc -I/usr/local/php/include/php/ext -I. -I/usr/install/src/php5.3-dev/ext/pdo_oci -DPHP_ATOM_INC -I/usr/install/src/php5.3-dev/ext/pdo_oci/include -I/usr/install/src/php5.3-dev/ext/pdo_oci/main -I/usr/install/src/php5.3-dev/ext/pdo_oci -I/usr/local/php/include/php -I/usr/local/php/include/php/main -I/usr/local/php/include/php/TSRM -I/usr/local/php/include/php/Zend -I/usr/local/php/include/php/ext -I/usr/local/php/include/php/ext/date/lib -I/usr/local/oracle/home1/rdbms/public -I/usr/local/oracle/home1/rdbms/demo -DHAVE_CONFIG_H -g -O2 -c /usr/install/src/php5.3-dev/ext/pdo_oci/pdo_oci.c  -fPIC -DPIC -o .libs/pdo_oci.o
/bin/sh /usr/install/src/php5.3-dev/ext/pdo_oci/libtool --mode=compile gcc -I/usr/local/php/include/php/ext -I. -I/usr/install/src/php5.3-dev/ext/pdo_oci -DPHP_ATOM_INC -I/usr/install/src/php5.3-dev/ext/pdo_oci/include -I/usr/install/src/php5.3-dev/ext/pdo_oci/main -I/usr/install/src/php5.3-dev/ext/pdo_oci -I/usr/local/php/include/php -I/usr/local/php/include/php/main -I/usr/local/php/include/php/TSRM -I/usr/local/php/include/php/Zend -I/usr/local/php/include/php/ext -I/usr/local/php/include/php/ext/date/lib -I/usr/local/oracle/home1/rdbms/public -I/usr/local/oracle/home1/rdbms/demo  -DHAVE_CONFIG_H  -g -O2   -c /usr/install/src/php5.3-dev/ext/pdo_oci/oci_driver.c -o oci_driver.lo
 gcc -I/usr/local/php/include/php/ext -I. -I/usr/install/src/php5.3-dev/ext/pdo_oci -DPHP_ATOM_INC -I/usr/install/src/php5.3-dev/ext/pdo_oci/include -I/usr/install/src/php5.3-dev/ext/pdo_oci/main -I/usr/install/src/php5.3-dev/ext/pdo_oci -I/usr/local/php/include/php -I/usr/local/php/include/php/main -I/usr/local/php/include/php/TSRM -I/usr/local/php/include/php/Zend -I/usr/local/php/include/php/ext -I/usr/local/php/include/php/ext/date/lib -I/usr/local/oracle/home1/rdbms/public -I/usr/local/oracle/home1/rdbms/demo -DHAVE_CONFIG_H -g -O2 -c /usr/install/src/php5.3-dev/ext/pdo_oci/oci_driver.c  -fPIC -DPIC -o .libs/oci_driver.o
/usr/install/src/php5.3-dev/ext/pdo_oci/oci_driver.c:497:7: error: token ""10.1"" is not valid in preprocessor expressions
make: *** [oci_driver.lo] Error 1


Patches

Pull Requests

History

AllCommentsChangesGit/SVN commitsRelated reports
 [2008-03-08 14:06 UTC] felipe@php.net
This bug has been fixed in CVS.

Snapshots of the sources are packaged every three hours; this change
will be in the next snapshot. You can grab the snapshot at
http://snaps.php.net/.
 
Thank you for the report, and for helping us make PHP better.


 [2016-03-08 01:33 UTC] sixd@php.net
-Package: PDO related +Package: PDO OCI -Assigned To: +Assigned To: sixd
 
PHP Copyright © 2001-2026 The PHP Group
All rights reserved.
Last updated: Mon Sep 14 15:00:01 2026 UTC