Fixed bug #44373 (PDO_OCI extension compile failed)